finally got object to pass through the stupid loop

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>SPA Date with a Random User</title>
 </head>
-<body>
+<body class="resultsList">
+	<nav></nav>
+	
 	<h1>SPA Date with a Random User</h1>
 	
 	<script type="module" src="scripts/main.js"></script>
