--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>SPA Date with a Random User</title>
 </head>
-<body class="resultsList">
-	<nav></nav>
-	
+
+<body>
+	<main class="userlist">
 	<h1>SPA Date with a Random User</h1>
 	
-	<script type="module" src="scripts/main.js"></script>
+	<section class="resultsList">
+		</section>
+
+
+		
+	</main>
 </body>
+<script type="module" src="scripts/main.js"></script>
 </html>
